12516 FIX Fixed state colors and overlapping texts in availability and timeline tables
* Availability tables showed state colors only on every other row.
This has been fixed and the display of state colors has been unified
with the common state color rendering that is known from views.
* Also overlapping text glitches were fixed for availability and
timeline tables.

--- a/web/htdocs/themes/facelift/scss/_logwatch.scss
+++ b/web/htdocs/themes/facelift/scss/_logwatch.scss
@@ -86,13 +86,13 @@
       }
     }
     &.OK {
-      background-color: $lightened-state0-bg-color;
+      background-color: lighten($color-state-success-background, 10%);
     }
     &.WARN {
-      background-color: $lightened-state1-bg-color;
+      background-color: lighten($color-state-1-background, 10%);
     }
     &.CRIT {
-      background-color: $lightened-state2-bg-color;
+      background-color: lighten($color-state-2-background, 10%);
     }
   }
 
